# AuditPatch

./: .gitmodules  CHANGELOG.md  README.md  build.gradle.kts  update.json
.github/workflows/: build.yml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  hook.c  hook.cpp
module/template/: customize.sh  module.prop  service.sh  uninstall.sh
